HW-6 Implemented servlet-based app for crawling, saving and deleting images